--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Plot-That-Failed-or-When-Men-Conspire_66863
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 66863-h/images/cover.jpg
 creator:
   author:
     agent_name: Carter, Nicholas (House name)
@@ -11,6 +14,8 @@ creator:
     - http://www.gutenberg.org/ebooks/author/2983
     - http://www.gutenberg.org/ebooks/author/43953
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66863#The-Plot-That-Failed-or-When-Men-Conspire
 gutenberg_issued: '2021-12-02'
 identifiers:
   gutenberg: '66863'
